--- a/base/datos/paginas/index.yml
+++ b/base/datos/paginas/index.yml
@@ -1,5 +1,5 @@
----
 
+---
 titulo: 'Exploración sobre ByteBeat'
 html_base: 'menu.html'
 ruta_static: 'index.html'
@@ -7,6 +7,6 @@ ruta_static: 'index.html'
 contenido: |
   # Exploración sobre Bytebeat { .py-5 }
 
-  [SIN CLASIFICAR](./pag/rpn_sin_clasificar/){.btn .btn-outline-success }
-  [DESBALANCEADOS](./pag/rpn_desbalanceados/){.btn .btn-outline-success }
-  [T y OPERADORES](./pag/rpn_t_y_operadores/){.btn .btn-outline-success }
+  [SIN CLASIFICAR](./pag/rpn_sin_clasificar/){.btn .btn-outline-success .my-2 }
+  [DESBALANCEADOS](./pag/rpn_desbalanceados/){.btn .btn-outline-success .my-2 }
+  [T y OPERADORES](./pag/rpn_t_y_operadores/){.btn .btn-outline-success .my-2 }
