--- a/base/datos/configuracion.yml
+++ b/base/datos/configuracion.yml
@@ -11,8 +11,8 @@ metadatos:
   favicon: 'favicon.ico'
 
 urls:
-  site: '/'
-  #site: 'https://caalma.github.io/exploracion-bytebeat/'
+  #site: '/'
+  site: 'https://caalma.github.io/exploracion-bytebeat/'
   github_del_proyecto: 'https://github.com/caalma/exploracion-bytebeat'
   web_del_autor: 'https://caalma.net.ar'
 
