Ajustes de interfaz. Ayuda.

--- a/base/datos/configuracion.yml
+++ b/base/datos/configuracion.yml
@@ -17,4 +17,4 @@ urls:
 
 reproductores:
   touchtbit: ['https://dev.eypacha.com/touchbit/', Touchbit, T]
-  html5bytebeat: ['https://greggman.com/downloads/examples/html5bytebeat/html5bytebeat.html', HTML5Bytebeat, G]
+  html5bytebeat: ['https://greggman.com/downloads/examples/html5bytebeat/html5bytebeat.html', HTML5Bytebeat, H]
