--- a/base/datos/paginas/rpn_sin_clasificar.yml
+++ b/base/datos/paginas/rpn_sin_clasificar.yml
@@ -1,252 +1,12 @@
 ---
-
 titulo: 'EsB: RPN sin clasificar'
 html_base: 'listado.html'
 ruta_static: '/pag/rpn_sin_clasificar/index.html'
+estilo_de_contenido: 'm-4 text-center'
 
 contenido: |
   # RPN sin clasificar { .py-4 }
 
-lista_bb:
-  - code:
-      - [t 17 >> t 13 >> t 19 >> | ^ t t * swap >>, 48000]
-      - [t 13 >> t 17 >> t 19 >> | ^ t t * swap >>, 48000]
-      - [t 13 >> t 17 >> t 19 >> | ^ t t * >>, 48000]
-    comment: |
+  ...
 
-  - code:
-      - [t 13 >> t 17 >> t 19 >> ^ & t t * swap >> 20 %, 48000]
-      - [t 13 >> t 17 >> t 19 >> ^ & t t * swap >> 47 % 79 -, 48000]
-
-  - code:
-      - [t 13 >> t 17 >> t 19 >> ^ & t *, 48000]
-      - [t 17 >> t 8 >> t 255 >> ^ & t *, 48000]
-      - [t 17 >> t 11 >> t 253 >> ^ & t *, 48000]
-
-  - code:
-      - [t 13 >> t 11 >> t 10 >> t 253 >> | | | t *, 48000]
-      - [t 35 >> t 11 >> t 10 >> t 253 >> | | | t *, 48000]
-      - [t 47 >> t 11 >> t 10 >> t 253 >> | | | t *, 48000]
-
-  - code:
-      - [t 13 >> t 7 >> << t 17 >> t 5 >> << | t *, 8000]
-
-  - code:
-      - [t 2 >> t 3 >> | t 5 >> t 7 >> | t 11 >> t 13 >> | + + t t ~ * * 32 %, 8000]
-
-  - code:
-      - [t 2 >> t 3 >> << t 5 >> t 7 >> << t 11 >> t 13 >> << + + t t ~ * * 32 %, 8000]
-
-  - code:
-      - [t 4 >> t << t 2 >> t 11 >> & | t 6 % -, 8000]
-
-  - code:
-      - [t 277 ^ t 128 ^ %, 8000]
-
-  - code:
-      - [t 191 ^ t 55 ^ t 15951 ^ % %, 8000]
-
-  - code:
-      - [t 63 / t 4 * & t t * >> t 7 / |, 8000]
-
-  - code:
-      - [t ~ t 7 * | t 5 >> | t t * | t 9 >> -, 8000]
-
-  - code:
-      - [t 6 % t 14 % t % 12 t 14 % + + + + t 9 >> t 6 >> t 3 * | ^ &, 8000]
-
-  - code:
-      - [t 16 % t 15 % t 14 % t 12 % + + + t 9 >> t 6 >> t 3 * | ^ &, 8000]
-
-  - code:
-      - [t 2 >> t 5 >> t 3 >> + - 0 <<, 8000]
-
-  - code:
-      - [t 2 >> t 3 >> t 5 >> ^ &, 8000]
-      - [t 1 << t 3 >> t 5 >> ^ &, 8000]
-
-  - code:
-      - [t 3 >> t 2 << t 8 >> << <<, 8000]
-      - [t 1 << t 2 >> t 8 >> >> <<, 8000]
-
-  - code:
-      - [t 1 << t 3 >> t 9 >> >> * 2 << t 2 >> t 4 >> t 5 >> + - +, 8000]
-      - [t 1 >> t 3 << t 9 >> << * 1 << t 3 >> t 2 >> t 5 >> >> - +, 8000]
-
-  - code:
-      - [13 t <<, 8000]
-
-  - code:
-      - [128 t >>, 8000]
-
-  - code:
-      - [t 140 & 3 <<, 8000]
-
-  - code:
-      - [t * t t * / & 27 *, 8000]
-      - [t * t t * / & 3 <<, 8000]
-
-  - code:
-      - [t tan 2 *, 8000]
-
-  - code:
-      - [3 t 5 t t 7 t 4 << >> >> << >> >> swap >>, 8000]
-
-  - code:
-      - [83 t t 7 t 5 t 3 t 2 << >> >> >> >> << >> >> >>, 6000]
-      - [83 t t 7 t 5 t 3 t 2 << >> >> >> >> << >> >> >>, 8000]
-    comment: ambient a 6000 ?  bailable a 8000 ? jeee
-
-  - code:
-      - [t t 5 >> t 7 >> t 4 >> << &, 8000]
-
-  - code:
-      - [t t t 7 >> t 5 >> t 3 >> << << |, 8000]
-
-  - code:
-      - [t t t 5 >> t 3 >> t 2 >> << >> >>, 8000]
-      - [t t t 5 >> t 3 >> t 9 >> >> >> <<, 8000]
-
-  - code:
-      - [t 2 t 11 << t 3 << t 5 << >> >> <<, 8000]
-
-  - code:
-      - [11 t t 42 t 11 << t 3 << t 3 << >> >> << >> >> <<, 48000]
-
-  - code:
-      - [15 5 9 17 5 0 9 t 11 >> 7 % pick t << ~, 8000]
-      - [143 3 2 135 17 5 11 192 1 9 t 10 >> 9 % pick t << ~, 8000]
-      - [1 2 0 16 0 15 0 3 1 11 t 13 >> 9 % pick t << * t 2 >> %, 8000]
-    comment: |
-      Variantes de código creado propuesto por [Ey Pacha](https://github.com/eypacha).
-
-  - code:
-      - [t t 11 >> 25 ^ >> t << 32640 ^ t 6 >> <<, 11000]
-      - [t t 12 >> 14 & >> t * 128 & t 5 >> >>, 11000]
-    comment: |
-      La primera es autoria de [Ey Pacha](https://github.com/eypacha), la segunda es un variante personal.
-
-  - code:
-      - [t 0.5 * t -0.3 * + t 0.4 * & t -0.14 * +, 8000]
-      - [t 0.5 * t -0.3 * + t 0.4 * + t -0.25 * +, 8000]
-      - [t 0.5 * t -0.3 * + t 0.4 * + t -0.25 * ~, 8000]
-      - [t 0.5 * t -0.3 * + t 0.4 * + t -0.25 * + t 7 >> <<, 8000]
-
-  - code:
-      - [t 0.8 * t -3.6 * + t 4.2 * + t 1.55 * + t 21 >> << t 8 >> << t 5 >> >> t 210 >> >> t 6 % +, 8000]
-      - [t 0.8 * t -3.6 * + t 4.2 * + t 1.55 * + t 21 >> << t 8 >> << t 5 >> >> t 210 >> >> t 8 >> + t 777 / >>, 8000]
-
-  - code:
-      - [t 0.8 * t -3.6 * + t 4.2 * + t 1.55 * + t 21 >> << t 8 >> << t 5 >> >> t 210 >> >> t 8 >> + t 777 / >>, 8000]
-      - [t 0.8 * t -3.6 * + t 4.2 * + t 1.55 * + t 21 >> << t 8 >> << t 5 >> >> t 210 >> >> t 8 >> + t 765 / +, 8000]
-      - [t 0.8 * t -3.6 * + t 4.2 * + t 1.55 * + t 21 >> << t 8 >> << t 5 >> >> t 545 >> >> t 10 * << t 765 / +, 8000]
-      - [t 0.8 * t -3.6 * + t 4.2 * + t 1.55 * - t 62 >> << t 13 >> << t 4 << >> t 545 >> >> t 10 * << t 765 / >>, 8000]
-      - [t 0.8 * t -3.6 * + t 4.2 * + t 1.55 * - t 62 >> << t 13 >> << t 4 << >> t 545 >> >> t 10 * | % t * <<, 8000]
-      - [t 0.8 | t -3.6 - * t 4.2 + / t 1.55 | / t 62 * << t 13 / - t 4 << - t 545 >> - t 10 % t 80 / - & ^, 8000]
-      - [t 0.8 | t -3.6 - / t 4.2 % + t 1.55 | / t 62 + % t 13 << * t 4 << ~ t 50 * - t 40 % t 613 / - | ^, 8000]
-
-  - code:
-      - [<< * t 23 >> ~ t 50 * - t 40 % t 613 / - | ^, 48000]
-      - [">> t 23 >> ~ t 50 * - t 40 % t 613 / - | ^", 48000]
-      - [">> t 21 >> ~ t 65 * - t 73 % t 643 / + | ^", 48000]
-      - [< * t 37 * ~ t 51 * - t 73 % t 613 / - | ^, 48000]
-
-
-  - code:
-      - [t 43 >> t 3 >> t 7 >> t 5 * + & | << t 1354 >> + / *, 48000]
-
-  - code:
-      - [t 128 % t 62815 / | t 115 / + ^, 32000]
-      - [t 205 % t 124 % | t 115 / << ^, 32000]
-      - [t 1629 % t 97 / | t 93 / | <<, 32000]
-
-  - code:
-      - [t 69 << t 15 << | t 3 | >> <<, 48000]
-
-  - code:
-      - [t 21930 / t 137 << | t 13 / * >> | 5 >>, 8000]
-
-  - code:
-      - [t 51 / t 170 % | t 3 * |, 8000]
-
-  - code:
-      - [t 192 / t 22 % ^ | t 6 % | t 47 / >>, 8000]
-
-  - code:
-      - [t 192 / t 22 % ^ | t 6 % |, 8000]
-
-  - code:
-      - [t 85 / t 195 << | t 31 / +, 8000]
-
-  - code:
-      - [t 85 / t 195 << | t 31 % +, 8000]
-      - [t 85 / t 195 >> | t 31 % +, 8000]
-      - [t 85 / t 195 << | t 5 % +, 8000]
-      - [t 85 / t 195 << | t 5 % -, 8000]
-      - [t 85 / t 195 << | t 17 >> +, 8000]
-      - [t 85 / t 195 << | t 17 >> *, 8000]
-      - [t 85 / t 3 << | t 17 >> *, 8000]
-
-  - code:
-      - [t 92 * t 169 / & 195 %, 8000]
-      - [t 129 * t 137 / | t t t | / 97 | /, 8000]
-
-  - code:
-      - [t 144 / t 64 << | t 3 * |, 8000]
-      - [t 48 / t 64 | | t 3 * |, 8000]
-      - [t 51 / t 170 % | t 3 * |, 8000]
-
-  - code:
-      - [t 2 * t 4 * |, 8000]
-
-  - code:
-      - [t 11 / t 2 * ^, 8000]
-
-  - code:
-      - [t 13 % t 8 % |, 8000]
-
-  - code:
-      - [t t * 11 % t &, 8000]
-
-  - code:
-      - [t 2 / t 3 / t 5 / | |, 8000]
-      - [t 5 / t 2 / t 5 / | |, 8000]
-
-  - code:
-      - [t 12 / t 5 * +, 8000]
-
-  - code:
-      - [t 5 % t 11 % ^, 8000]
-
-  - code:
-      - [t 8 * 3 % t 9 / -, 8000]
-
-  - code:
-      - [t t 2 / *, 8000]
-
-  - code:
-      - [2 t 3 t 5 t >> >> << << +, 8000]
-
-  - code:
-      - [11 t * 13 t * |, 8000]
-
-  - code:
-      - [3 t / 5 t / %, 8000]
-      - [3 t * t 5 / |, 8000]
-
-  - code:
-      - [t 9 % t 5 * *, 8000]
-
-  - code:
-      - [t t 3 << t 2 >> | &, 8000]
-
-  - code:
-      - [t t 22 * ^, 8000]
-      - [t t 5 % *, 8000]
-
-  - code:
-      - [t t 4 * 11 t t t * | |, 8000]
-      - [t t 4 * 11 t t t / | |, 8000]
-
-  - code:
-      - [t t 5 * | 11 + t 31 ^, 8000]
+lista_bb: []
