--- a/base/datos/paginas/ayuda.yml
+++ b/base/datos/paginas/ayuda.yml
@@ -8,20 +8,34 @@ contenido: |
   # Ayuda y modo de uso {.text-center}
 
   <br>
-  Los campos códigos disponen de ciertas utilidades interactivas.
 
-  1. Clikeando sobre cualquiera de ellos el código de la misma se copia al portapapeles. Además se activa como `código-actual`.
+  Los campos de código disponen de ciertas utilidades interactivas.
+
+  1. Clikeando sobre cualquiera de ellos el código contenido:
+      - se copia al portapapeles,
+      - se activa como `código-actual`.
+      <br><br>
+
   2. Cuando el campo está en foco y con el cursor en modo de edición es posible cambiar el contenido. Al darle click nuevamente se vuelven a realizar las acciones del item 1.
-  3. Cuando existe un `código-actual` activo quedan disponibles algunas utilidades en el márgen derecho de la página.
+
+  3. Cuando existe un `código-actual` activo se habilitan utilidades en el lateral derecho de la página.
+
   4. La utilidad **P** reproduce o pausa el audio generado mediante el `código-actual`.
+
   5. La utilidad **T** abre la aplicación externa **Touchbit** con el `código-actual`, para escucharlo o editarlo allí.
+
   6. La utilidad **H** abre la aplicación externa **HTML5Bytebeat** con el `código-actual`, para escucharlo o editarlo allí.
+
   7. El campo numérico junto a cada campo de código especifíca el _sample rate_ con que se escuchará dicho audio. Al modificarlo, automáticamente se actualizan los enlaces de **T** y **H**, y además, si el audio se está reproduciendo, será afectado con el nuevo _sample rate_.
+
   8. Estando dentro de cualquier campo de código existe cuatro atajos de teclado:
-     - `Alt+p` hace lo mismo que la utilidad **P**,
-     - `Alt+t` hace lo mismo que la utilidad **T**,
-     - `Alt+h` hace lo mismo que la utilidad **H**,
-     - `Alt+Enter` hace lo mismo que darle click al campo de código (el item 1).
+      - `Alt+p` hace lo mismo que la utilidad **P**,
+      - `Alt+t` hace lo mismo que la utilidad **T**,
+      - `Alt+h` hace lo mismo que la utilidad **H**,
+      - `Alt+Enter` hace lo mismo que darle click al campo de código (el item 1).
+      <br><br>
+
   9. Con foco en cualquier elemento de la página, existen otros atajos de teclado:
-    - `Alt+1` o `Alt+i` redirecciona a la página de inicio o portada.
-    - `Alt+2` o `Alt+a` redirecciona a la página de ayuda.
+      - `Alt+1` o `Alt+i` redirecciona a la página de inicio o portada.
+      - `Alt+2` o `Alt+a` redirecciona a la página de ayuda.
+      <br><br>
