--- a/base/datos/paginas/rpn_estilos_de_escritura.yml
+++ b/base/datos/paginas/rpn_estilos_de_escritura.yml
@@ -11,5 +11,5 @@ lista_bb:
   - code:
       - [3 t 5 t t 7 t 4 << >> >> << >> >> swap >>, 8000]
       - [t 4 << 7 swap >> t swap >> t swap << 5 swap >> t swap >> 3 >>, 8000]
-    comment: |
+    text: |
       Ambas expresiones son equivalentes: **1** escrita aislando operandos y operadores; **2** intercalándolos.
