--- a/base/datos/paginas/rpn_melodias.yml
+++ b/base/datos/paginas/rpn_melodias.yml
@@ -9,6 +9,15 @@ contenido: |
 
 lista_bb:
   - code:
+      - [t 227 % t 137 % t 192 % t 128 % t 128 % t 129 % t 6 % pick t swap - 3 /, 6000]
+      - [t 1 % t 7 % t 0 % t 5 % t 0 % t 8 % t 1 % t 2 % t 8 % pick t swap >> 60 /, 48000]
+      - [t 0 % t 2 % t 0 % t 5 % t 0 % t 2 % t 1 % t 0 % t 8 % pick t swap >> 60 /, 48000]
+      - [t t 0 % t 2 % t 0 % t 5 % t 0 % t 2 % t 1 % t 0 % t 8 % pick t swap >> 6 >>, 48000]
+      - [t 19 % t 3 % t 7 % t 0 % t 3 % t 0 % t 1 % t 15 % t 8 % pick t swap << 31 >>, 48000]
+    comment: |
+      Melodías controladas.
+
+  - code:
       - [t t 3 << t 2 >> | swap >>, 8000]
 
   - code:
@@ -19,26 +28,26 @@ lista_bb:
   - code:
       - [t 13 >> t 17 >> t 19 >> ^ & t t * swap >> 20 %, 48000]
       - [t 13 >> t 17 >> t 19 >> ^ & t t * swap >> 47 % 79 -, 48000]
-    comment: |
+    text: |
       Con ritmo y frecuencias que se aceleran.
 
   - code:
       - [t 13 >> t 17 >> t 19 >> ^ & t *, 48000]
       - [t 17 >> t 8 >> t 255 >> ^ & t *, 48000]
       - [t 17 >> t 11 >> t 253 >> ^ & t *, 48000]
-    comment: |
+    text: |
       Divertidas, jee.
 
   - code:
       - [t 13 >> t 11 >> t 10 >> t 253 >> | | | t *, 48000]
       - [t 35 >> t 11 >> t 10 >> t 253 >> | | | t *, 48000]
       - [t 47 >> t 11 >> t 10 >> t 253 >> | | | t *, 48000]
-    comment: |
+    text: |
       Parecido a un contrapunto.
 
   - code:
       - [t 13 >> t 7 >> << t 17 >> t 5 >> << | t *, 8000]
-    comment: |
+    text: |
       Como alguna danza latinoamerican.
 
   - code:
@@ -47,13 +56,13 @@ lista_bb:
   - code:
       - [t 63 / t 4 * & t t * >> t 7 / |, 8000]
       - [t ~ t 7 * | t 5 >> | t t * | t 9 >> -, 8000]
-    comment: |
+    text: |
       Como aire de resorte.
 
   - code:
       - [83 t t 7 t 5 t 3 t 2 << >> >> >> >> << >> >> >>, 6000]
       - [83 t t 7 t 5 t 3 t 2 << >> >> >> >> << >> >> >>, 8000]
-    comment: |
+    text: |
       Ambient a 6000 ? Bailable a 8000 ? jeee
 
   - code:
@@ -66,7 +75,7 @@ lista_bb:
       - [15 5 9 17 5 0 9 t 11 >> 7 % pick t << ~, 8000]
       - [143 3 2 135 17 5 11 192 1 9 t 10 >> 9 % pick t << ~, 8000]
       - [1 2 0 16 0 15 0 3 1 11 t 13 >> 9 % pick t << * t 2 >> %, 8000]
-    comment: |
+    text: |
       Selección de frecuencias y patrón rítmico. Variantes de código creado propuesto por [Ey Pacha](https://github.com/eypacha).
 
   - code:
@@ -87,7 +96,7 @@ lista_bb:
 
   - code:
       - [t 21930 / t 137 << | t 13 / * >> | 5 >>, 48000]
-    comment:
+    text:
       Una sola voz.
 
   - code:
@@ -96,17 +105,17 @@ lista_bb:
       - [t 85 / t 195 << | t 17 >> +, 8000]
       - [t 85 / t 195 << | t 17 >> *, 8000]
       - [t 85 / t 3 << | t 17 >> *, 8000]
-    comment: |
+    text: |
       **4** y **5** se hacen esperar, pero progresivamente van "cantando".
 
   - code:
       - [t 92 * t 169 / & 195 %, 8000]
-    comment:
+    text:
       Muchas campanitas.
 
   - code:
       - [t 144 / t 64 << | t 3 * |, 8000]
       - [t 51 / t 170 % | t 3 * |, 8000]
       - [t 48 / t 64 | | t 3 * |, 8000]
-    comment:
+    text:
       Similar motivo con variantes de velocidad.
