--- a/base/datos/paginas/rpn_sin_clasificar.yml
+++ b/base/datos/paginas/rpn_sin_clasificar.yml
@@ -19,3 +19,16 @@ lista_bb:
   - code:
       - [t 129 % 32 < t 125 % 16 < t 191 % 64 < | | t 5 >> swap >> 32 /, 48000]
       - [t 129 % 32 > t 125 % 16 > t 191 % 64 > | | t 5 >> swap << 32 /, 48000]
+
+  - code:
+      - [24 0 35 0 4 0 81 0 t 8 % pick t t 112 ~ && + swap << 41 >>, 48000]
+
+  - code:
+      - [t 5 >> t t 44 >> << | t 154 % 96 >> - 4 /, 48000]
+      - [t 5 >> t t 44 >> << | t 154 % 96 >> - 4 / 88 %, 48000]
+      - [t 8 >> t 7 >> t 9 >> | swap 5 % << t * 9 >> t 8 >> |, 48000]
+      - [t 44444 >> t 66 >> t 11 >> | swap 14 % << t * 41 >>, 48000]
+
+  - code:
+      - [t 6 >> t t 44 >> << |, 48000]
+      - [t 6 >> t t 47 >> << |, 48000]
