Ajustes de atajo de teclado.

--- a/base/datos/paginas/ayuda.yml
+++ b/base/datos/paginas/ayuda.yml
@@ -36,6 +36,6 @@ contenido: |
       <br><br>
 
   9. Con foco en cualquier elemento de la página, existen otros atajos de teclado:
-      - `Alt+1` o `Alt+i` redirecciona a la página de inicio o portada.
-      - `Alt+2` o `Alt+a` redirecciona a la página de ayuda.
+      - `Alt+i` redirecciona a la página de inicio o portada.
+      - `Alt+a` redirecciona a la página de ayuda.
       <br><br>
