--- a/base/datos/paginas/rpn_sin_clasificar.yml
+++ b/base/datos/paginas/rpn_sin_clasificar.yml
@@ -32,3 +32,19 @@ lista_bb:
       - [t 6 >> t t 47 >> << |, 48000]
       - [t 5 >> t t 44 >> << | t 154 % 96 >> - 4 /, 48000]
       - [t 5 >> t t 44 >> << | t 154 % 96 >> - 4 / 88 %, 48000]
+
+  - code:
+      - [t 5 >> t 11 % + t 9 >> t 84 % - t 9 >> t 95 % 62 + + % ^ |, 48000]
+      - [t 5 >> t 11 % + t 9 >> t 84 % - t 9 >> t 40 % 62 + + ~ % | |, 48000]
+
+  - code:
+      - [t 86 % 99 >> t 9 >> swap >> -, 48000]
+      - [t 86 % 99 >> t 9 >> swap >> +, 48000]
+  - code:
+      - [t 96 % 69 >> t 9 >> << -, 48000]
+      - [t 96 % 69 >> t 9 >> << +, 48000]
+
+  - code:
+      - [t t >> 9 >> t 7 >> | t t 190 % ^ | t 19 >> +, 48000]
+    text: |
+      Empieza limpio, y a los 500000 se llena de ruido,
