--- a/base/datos/paginas/rpn_sin_clasificar.yml
+++ b/base/datos/paginas/rpn_sin_clasificar.yml
@@ -75,3 +75,24 @@ lista_bb:
   - code:
       - [t t t t + * + 9 >>, 8179]
       - [t t t t + * << 13 >>, 8179]
+
+  - code:
+      - [t 15 / t 6 / | t 2 * | 90 + 192 &, 4452]
+      - [t 50 / t 6 / % | 128 & 100 +, 8000]
+      - [t 50 / t 6 / % | 192 & 100 +, 8000]
+      - [t 50 / t 6 / % | 208 & 100 +, 8000]
+      - [t 5 / t 6 / % | 208 & 100 +, 8000]
+      - [t 5 / t 6 / % | 176 & 100 +, 8000]
+      - [t 5 / t 6 / % ^ 174 & 100 +, 8000]
+      - [t 5 / t 23 / % ^ 208 & 100 +, 8000]
+      - [t 5 / t 23 / % ^ 176 & 100 +, 8000]
+      - [t 5 / t 23 / % | 176 & 100 +, 8000]
+      - [t 7 / t 47 / % ^ 176 & 100 +, 8000]
+      - [t 7 / t 47 / % ^ 176 & 170 +, 8000]
+      - [t 7 / t 47 / % ^ 176 & 85 +, 8000]
+      - [t 7 / t 47 / % ^ 176 & 85 -, 8000]
+      - [t 7 / t 47 / % ^ 176 & 85 *, 8000]
+      - [t 7 / t 47 / % ^ 176 & * % 200 %, 8000]
+      - [t 7 / t 47 / % ^ 176 & 195 *, 8000]
+    text: |
+      Varias sobre ritmos, inspiradas en **1** por [Gabriel Vinazza](https://github.com/gabochi){target=_blank}.
