--- a/base/datos/paginas/rpn_melodias.yml
+++ b/base/datos/paginas/rpn_melodias.yml
@@ -76,11 +76,10 @@ lista_bb:
       - [143 3 2 135 17 5 11 192 1 9 t 10 >> 9 % pick t << ~, 8000]
       - [1 2 0 16 0 15 0 3 1 11 t 13 >> 9 % pick t << * t 2 >> %, 8000]
     text: |
-      Selección de frecuencias y patrón rítmico. Variantes de código creado propuesto por [Ey Pacha](https://github.com/eypacha).
+      Selección de frecuencias y patrón rítmico. Variantes de código creado propuesto por [Federico Scalia](https://github.com/eypacha){target=_blank}.
 
   - code:
-      - [t 0.8 | t -3.6 - * t 4.2 + / t 1.55 | / t 62 * << t 13 / - t 4 << - t 545 >> - t 10 % t 80 / - & ^, 8000
-]
+      - [t 0.8 | t -3.6 - * t 4.2 + / t 1.55 | / t 62 * << t 13 / - t 4 << - t 545 >> - t 10 % t 80 / - & ^, 8000]
 
   - code:
       - [<< * t 23 >> ~ t 50 * - t 40 % t 613 / - | ^, 48000]
