--- a/base/datos/paginas/rpn_sin_clasificar.yml
+++ b/base/datos/paginas/rpn_sin_clasificar.yml
@@ -95,4 +95,4 @@ lista_bb:
       - [t 7 / t 47 / % ^ 176 & * % 200 %, 8000]
       - [t 7 / t 47 / % ^ 176 & 195 *, 8000]
     text: |
-      Varias sobre ritmos, inspiradas en **1** por [Gabriel Vinazza](https://github.com/gabochi){target=_blank}.
+      Varias sobre ritmos, inspiradas en el código **1** de [Gabriel Vinazza](https://github.com/gabochi){target=_blank}.
